# VectorCoding

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data_dir/: .gitignore  README.md  master_config.yaml
data_dir/my_data/: data.parquet
data_dir/news_articles/: data.parquet
data_dir/product_reviews/: data.parquet
data_dir/sentiment/: data.parquet
data_dir/support_tickets/: data.parquet
examples/: advanced_search.py  basic_usage.py
scenarios/: __init__.py  analytics.py  ingest.py  recommend.py  search.py
scenarios/utils/: common.py
src/vector_sentiment/: __init__.py  __main__.py
src/vector_sentiment/cli/: __init__.py  app.py
src/vector_sentiment/config/: __init__.py  constants.py  dataset_config.py  settings.py
src/vector_sentiment/data/: __init__.py  loader.py  preprocessor.py  validator.py
src/vector_sentiment/embeddings/: __init__.py  service.py  sparse.py
src/vector_sentiment/models/: __init__.py  schemas.py
src/vector_sentiment/search/: __init__.py  recommender.py  searcher.py
src/vector_sentiment/utils/: __init__.py  helpers.py  logger.py
src/vector_sentiment/vectordb/: __init__.py  client.py  collection.py  concepts.py  upserter.py
src/vector_sentiment/vectordb/operations/: __init__.py  collection_manager.py  create.py  delete.py  index_manager.py  read.py  recommend.py  scroll.py  search.py  update.py
